Correctly align zoom icon

--- a/FitnessViewer/Content/Site.less
+++ b/FitnessViewer/Content/Site.less
@@ -276,3 +276,7 @@ h6,
      border: 1px solid #ccc; 
      width: 100%;
                 }
+
+.zoom{
+    float:right;
+}
